# asset_modifer

./: Cargo.toml
asset_manager/: Cargo.toml
asset_manager/src/: create.rs  loader.rs  main.rs
asset_manager/src/ecs/: component_lib.rs  mod.rs  resources.rs
asset_manager/src/ecs/systems/: input.rs  mod.rs  render.rs
asset_manager/src/ecs/world/: world.rs  world_resources.rs
asset_manager/src/errors/: ecs_errors.rs  filesystem_errors.rs  mod.rs  shader_errors.rs
asset_manager/src/filesystem/: loader.rs  loading.rs  mod.rs  parser.rs  saving.rs
asset_manager/src/input_manager/: camera_input.rs  grid_input.rs  input_manager.rs  mod.rs  mode.rs  mouse_input.rs
asset_manager/src/math/: aliases.rs  camera.rs  mod.rs  point.rs  ray.rs  transforms.rs  trigonometry.rs
asset_manager/src/polygons/: clipping.rs  convex.rs  grid.rs  mod.rs  outline.rs
asset_manager/src/render/: buffer.rs  mesh.rs  mod.rs  render_mesh.rs  texture.rs  vertex.rs
asset_manager/src/render/shaders/: mod.rs  shader.rs  shader_program.rs
gl/src/: lib.rs
src/: create.rs  main.rs
