[package]
name = "asset_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = {workspace=true}

eyre = "0.3.7"
tobj = "4.0.0"
image = "0.24.7"
thiserror = "1.0.48"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.glfw]
version = "0.53.0"
default-features = false